@@ -1,3 +1,11 @@
+2004-06-23  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* game.c: 
+	* menu.h:	
+	* menu.c: Add menu items and a toolbar for the commands like
+	teleport, wait, etc. Also includes logic to correctly set
+	sensitivity.
+
 2004-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* gnobots.c:	
